--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 
   <section class="products">
-    <h2>ur Products</h2>
+    <h2>our products</h2>
     <div class="product-list">
       <div class="product">
         <h3>boe</h3>
@@ -45,3 +45,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
